// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MusicPlayerAndQueue > when isQueueListOpened is false > matches the snapshot 1`] = `
"<div class="musicPlayer">
  <div class="inputRange standard desktopOnly trackSeeker" aria-label="Seek" aria-valuetext="00:00 of 00:00">
    <div class="centerItems slider">
      <div class="progressWrapper">
        <div class="process" style="width: 0px;"></div>
        <!--v-if-->
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <div class="spaceBetween centerItems inner">
    <div class="centerItems trackDetailsWrapper"><button class="centerItems buttonLink mobileOnly queueControl mobileOnly queueControl" type="button" title="Open queue">
        <phqueue class="icon" aria-hidden="true" size="24" weight="regular"></phqueue><span class="clamp text visuallyHidden"> Open queue </span>
      </button>
      <div class="centerAll preloadImage image">
        <div class="iconImage">
          <!---->
        </div>
      </div>
      <div class="trackDetails">
        <div class="marqueeScroll">
          <div class="bulletList inner">
            <div class="content">
              <p class="strong mBXS"></p>
            </div>
          </div>
        </div>
        <!--v-if-->
      </div>
    </div><span class="centerItems spinningLoader spinningLoader mobileOnly playPauseButton"><ph-circle-notch-stub size="24" class="icon"></ph-circle-notch-stub><span class="visuallyHidden">Loading...</span></span>
    <div class="centerItems playerControls centerAll desktopOnly"><button class="centerItems buttonLink" type="button" title="Switch shuffle off">
        <phshuffle class="icon" aria-hidden="true" size="24" weight="regular" color="currentColor"></phshuffle><span class="clamp text visuallyHidden">Switch shuffle off</span>
      </button>
      <div class="centerItems spaceBetween"><button class="centerItems buttonLink disabled" disabled="" type="button" title="Previous track">
          <phskipback class="icon" aria-hidden="true" size="24" weight="fill"></phskipback><span class="clamp text visuallyHidden"> Previous track </span>
        </button>
        <!--v-if--><span class="centerItems spinningLoader spinningLoader playPauseButton"><ph-circle-notch-stub size="24" class="icon"></ph-circle-notch-stub><span class="visuallyHidden">Loading...</span></span>
        <!--v-if--><button class="centerItems buttonLink disabled" disabled="" type="button" title="Next track">
          <phskipforward class="icon" aria-hidden="true" size="24" weight="fill"></phskipforward><span class="clamp text visuallyHidden"> Next track </span>
        </button>
      </div><button class="centerItems buttonLink" type="button" title="Turn on repeat all">
        <phrepeat class="icon" aria-hidden="true" size="24" weight="regular" color="currentColor"></phrepeat><span class="clamp text visuallyHidden">Turn on repeat all</span>
      </button>
    </div>
    <div class="centerAll playerOptions desktopOnly playerOptions">
      <!--v-if-->
      <div class="centerItems volumeControl"><button class="centerItems buttonLink" type="button" title="Mute">
          <phspeakerhigh class="icon" aria-hidden="true" size="24" weight="regular"></phspeakerhigh><span class="clamp text visuallyHidden">Mute</span>
        </button>
        <div class="centerItems smallFont volumeInputWrapper">
          <div class="inputRange" aria-label="Volume" aria-valuetext="1 of 1" hide-thumb="">
            <div class="centerItems slider">
              <div class="progressWrapper">
                <div class="process" style="width: 0px;"></div>
                <!--v-if-->
              </div>
              <div class="thumb" style="left: -6px;"></div>
              <!--v-if-->
            </div>
          </div>
          <p aria-hidden="" class="currentVolume">100</p>
          <p class="visuallyHidden"> Volume at 100% </p>
        </div>
      </div>
      <!--v-if--><button class="centerItems buttonLink" type="button" title="Media information">
        <phinfo class="icon" aria-hidden="true" size="24" weight="regular"></phinfo><span class="clamp text visuallyHidden"> Media information </span>
      </button>
      <!--v-if--><button class="centerItems buttonLink" type="button" title="Open queue">
        <phqueue class="icon" aria-hidden="true" size="24" weight="regular"></phqueue><span class="clamp text visuallyHidden"> Open queue </span>
      </button>
    </div>
  </div>
</div>
<div class="queueWrapper column"><button class="centerItems buttonLink centerAll fullWidth queueAction queueAction" type="button" title="Close queue menu">
    <phcaretdown class="icon" aria-hidden="true" size="24" weight="bold"></phcaretdown><span class="clamp text visuallyHidden"> Close queue menu </span>
  </button>
  <div class="column playerWrapper">
    <div class="wrapper">
      <div class="inner">
        <div class="imageWrapper">
          <div class="imageInner">
            <div class="preloadImageWrapper">
              <div class="centerAll preloadImage preloadImage">
                <div class="iconImage">
                  <!---->
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div class="trackDetailsWrapper">
        <div class="mBAllL column trackDetails">
          <div>
            <div class="marqueeScroll">
              <div class="bulletList inner">
                <div class="content">
                  <h2 class="strong mBXS"></h2>
                </div>
              </div>
            </div>
            <!--v-if-->
          </div>
          <div class="fullWidth">
            <div class="inputRange standard fullWidth" aria-label="Seek" aria-valuetext="00:00 of 00:00">
              <div class="centerItems slider">
                <div class="progressWrapper">
                  <div class="process" style="width: 0px;"></div>
                  <!--v-if-->
                </div>
                <!--v-if-->
                <!--v-if-->
              </div>
            </div>
            <!--v-if-->
          </div>
          <div class="centerItems spaceBetween fullWidth secondaryOptions"><button class="centerItems buttonLink disabled" disabled="" type="button" title="Previous track">
              <phskipback class="icon" aria-hidden="true" size="24" weight="fill"></phskipback><span class="clamp text visuallyHidden"> Previous track </span>
            </button>
            <!--v-if--><span class="centerItems spinningLoader spinningLoader playPauseButton"><ph-circle-notch-stub size="24" class="icon"></ph-circle-notch-stub><span class="visuallyHidden">Loading...</span></span>
            <!--v-if--><button class="centerItems buttonLink disabled" disabled="" type="button" title="Next track">
              <phskipforward class="icon" aria-hidden="true" size="24" weight="fill"></phskipforward><span class="clamp text visuallyHidden"> Next track </span>
            </button>
          </div>
          <div class="centerAll spaceBetween secondaryOptions">
            <!--v-if--><button class="centerItems buttonLink" type="button" title="Switch shuffle off">
              <phshuffle class="icon" aria-hidden="true" size="24" weight="regular" color="currentColor"></phshuffle><span class="clamp text visuallyHidden">Switch shuffle off</span>
            </button><button class="centerItems buttonLink" type="button" title="Turn on repeat all">
              <phrepeat class="icon" aria-hidden="true" size="24" weight="regular" color="currentColor"></phrepeat><span class="clamp text visuallyHidden">Turn on repeat all</span>
            </button>
            <!--v-if--><button class="centerItems buttonLink" type="button" title="Media information">
              <phinfo class="icon" aria-hidden="true" size="24" weight="regular"></phinfo><span class="clamp text visuallyHidden"> Media information </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div><button class="centerItems buttonLink centerAll fullWidth queueAction queueAction" type="button" title="Open queue list">
    <phplaylist class="icon" aria-hidden="true" size="24" weight="bold"></phplaylist><span class="clamp text visuallyHidden"> Open queue list </span>
  </button>
</div>
<div class="queueWrapper" style="display: none;">
  <div class="centerAll"><button class="centerItems buttonLink centerAll fullWidth queueAction queueAction" type="button" title="Close queue list">
      <phcaretdown class="icon" aria-hidden="true" size="24" weight="bold"></phcaretdown><span class="clamp text visuallyHidden"> Close queue list </span>
    </button></div>
  <div class="spaceBetween">
    <div></div><button class="centerItems buttonLink" type="button" title="Clear queue">
      <phtrash class="icon" aria-hidden="true" size="24" weight="regular"></phtrash><span class="clamp text visuallyHidden"> Clear queue </span>
    </button>
  </div>
  <div class="column centerAll noMediaMessage">
    <phmusicnotes size="50"></phmusicnotes>
    <p>No tracks found.</p>
  </div>
</div>"
`;

exports[`MusicPlayerAndQueue > when isQueueListOpened is true > matches the snapshot 1`] = `
"<div class="musicPlayer">
  <div class="inputRange standard desktopOnly trackSeeker" aria-label="Seek" aria-valuetext="00:00 of 00:00">
    <div class="centerItems slider">
      <div class="progressWrapper">
        <div class="process" style="width: 0px;"></div>
        <!--v-if-->
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <div class="spaceBetween centerItems inner">
    <div class="centerItems trackDetailsWrapper"><button class="centerItems buttonLink mobileOnly queueControl mobileOnly queueControl" type="button" title="Open queue">
        <phqueue class="icon" aria-hidden="true" size="24" weight="regular"></phqueue><span class="clamp text visuallyHidden"> Open queue </span>
      </button>
      <div class="centerAll preloadImage image">
        <div class="iconImage">
          <!---->
        </div>
      </div>
      <div class="trackDetails">
        <div class="marqueeScroll">
          <div class="bulletList inner">
            <div class="content">
              <p class="strong mBXS"></p>
            </div>
          </div>
        </div>
        <!--v-if-->
      </div>
    </div><span class="centerItems spinningLoader spinningLoader mobileOnly playPauseButton"><ph-circle-notch-stub size="24" class="icon"></ph-circle-notch-stub><span class="visuallyHidden">Loading...</span></span>
    <div class="centerItems playerControls centerAll desktopOnly"><button class="centerItems buttonLink" type="button" title="Switch shuffle off">
        <phshuffle class="icon" aria-hidden="true" size="24" weight="regular" color="currentColor"></phshuffle><span class="clamp text visuallyHidden">Switch shuffle off</span>
      </button>
      <div class="centerItems spaceBetween"><button class="centerItems buttonLink disabled" disabled="" type="button" title="Previous track">
          <phskipback class="icon" aria-hidden="true" size="24" weight="fill"></phskipback><span class="clamp text visuallyHidden"> Previous track </span>
        </button>
        <!--v-if--><span class="centerItems spinningLoader spinningLoader playPauseButton"><ph-circle-notch-stub size="24" class="icon"></ph-circle-notch-stub><span class="visuallyHidden">Loading...</span></span>
        <!--v-if--><button class="centerItems buttonLink disabled" disabled="" type="button" title="Next track">
          <phskipforward class="icon" aria-hidden="true" size="24" weight="fill"></phskipforward><span class="clamp text visuallyHidden"> Next track </span>
        </button>
      </div><button class="centerItems buttonLink" type="button" title="Turn on repeat all">
        <phrepeat class="icon" aria-hidden="true" size="24" weight="regular" color="currentColor"></phrepeat><span class="clamp text visuallyHidden">Turn on repeat all</span>
      </button>
    </div>
    <div class="centerAll playerOptions desktopOnly playerOptions">
      <!--v-if-->
      <div class="centerItems volumeControl"><button class="centerItems buttonLink" type="button" title="Mute">
          <phspeakerhigh class="icon" aria-hidden="true" size="24" weight="regular"></phspeakerhigh><span class="clamp text visuallyHidden">Mute</span>
        </button>
        <div class="centerItems smallFont volumeInputWrapper">
          <div class="inputRange" aria-label="Volume" aria-valuetext="1 of 1" hide-thumb="">
            <div class="centerItems slider">
              <div class="progressWrapper">
                <div class="process" style="width: 0px;"></div>
                <!--v-if-->
              </div>
              <div class="thumb" style="left: -6px;"></div>
              <!--v-if-->
            </div>
          </div>
          <p aria-hidden="" class="currentVolume">100</p>
          <p class="visuallyHidden"> Volume at 100% </p>
        </div>
      </div>
      <!--v-if--><button class="centerItems buttonLink" type="button" title="Media information">
        <phinfo class="icon" aria-hidden="true" size="24" weight="regular"></phinfo><span class="clamp text visuallyHidden"> Media information </span>
      </button>
      <!--v-if--><button class="centerItems buttonLink" type="button" title="Open queue">
        <phqueue class="icon" aria-hidden="true" size="24" weight="regular"></phqueue><span class="clamp text visuallyHidden"> Open queue </span>
      </button>
    </div>
  </div>
</div>
<div class="queueWrapper column"><button class="centerItems buttonLink centerAll fullWidth queueAction queueAction" type="button" title="Close queue menu">
    <phcaretdown class="icon" aria-hidden="true" size="24" weight="bold"></phcaretdown><span class="clamp text visuallyHidden"> Close queue menu </span>
  </button>
  <div class="column playerWrapper">
    <div class="wrapper">
      <div class="inner">
        <div class="imageWrapper">
          <div class="imageInner">
            <div class="preloadImageWrapper">
              <div class="centerAll preloadImage preloadImage">
                <div class="iconImage">
                  <!---->
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div class="trackDetailsWrapper">
        <div class="mBAllL column trackDetails">
          <div>
            <div class="marqueeScroll">
              <div class="bulletList inner">
                <div class="content">
                  <h2 class="strong mBXS"></h2>
                </div>
              </div>
            </div>
            <!--v-if-->
          </div>
          <div class="fullWidth">
            <div class="inputRange standard fullWidth" aria-label="Seek" aria-valuetext="00:00 of 00:00">
              <div class="centerItems slider">
                <div class="progressWrapper">
                  <div class="process" style="width: 0px;"></div>
                  <!--v-if-->
                </div>
                <!--v-if-->
                <!--v-if-->
              </div>
            </div>
            <!--v-if-->
          </div>
          <div class="centerItems spaceBetween fullWidth secondaryOptions"><button class="centerItems buttonLink disabled" disabled="" type="button" title="Previous track">
              <phskipback class="icon" aria-hidden="true" size="24" weight="fill"></phskipback><span class="clamp text visuallyHidden"> Previous track </span>
            </button>
            <!--v-if--><span class="centerItems spinningLoader spinningLoader playPauseButton"><ph-circle-notch-stub size="24" class="icon"></ph-circle-notch-stub><span class="visuallyHidden">Loading...</span></span>
            <!--v-if--><button class="centerItems buttonLink disabled" disabled="" type="button" title="Next track">
              <phskipforward class="icon" aria-hidden="true" size="24" weight="fill"></phskipforward><span class="clamp text visuallyHidden"> Next track </span>
            </button>
          </div>
          <div class="centerAll spaceBetween secondaryOptions">
            <!--v-if--><button class="centerItems buttonLink" type="button" title="Switch shuffle off">
              <phshuffle class="icon" aria-hidden="true" size="24" weight="regular" color="currentColor"></phshuffle><span class="clamp text visuallyHidden">Switch shuffle off</span>
            </button><button class="centerItems buttonLink" type="button" title="Turn on repeat all">
              <phrepeat class="icon" aria-hidden="true" size="24" weight="regular" color="currentColor"></phrepeat><span class="clamp text visuallyHidden">Turn on repeat all</span>
            </button>
            <!--v-if--><button class="centerItems buttonLink" type="button" title="Media information">
              <phinfo class="icon" aria-hidden="true" size="24" weight="regular"></phinfo><span class="clamp text visuallyHidden"> Media information </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div><button class="centerItems buttonLink centerAll fullWidth queueAction queueAction" type="button" title="Open queue list">
    <phplaylist class="icon" aria-hidden="true" size="24" weight="bold"></phplaylist><span class="clamp text visuallyHidden"> Open queue list </span>
  </button>
</div>
<div class="queueWrapper slide-up-down-enter-from slide-up-down-enter-active">
  <div class="centerAll"><button class="centerItems buttonLink centerAll fullWidth queueAction queueAction" type="button" title="Close queue list">
      <phcaretdown class="icon" aria-hidden="true" size="24" weight="bold"></phcaretdown><span class="clamp text visuallyHidden"> Close queue list </span>
    </button></div>
  <div class="spaceBetween">
    <div></div><button class="centerItems buttonLink" type="button" title="Clear queue">
      <phtrash class="icon" aria-hidden="true" size="24" weight="regular"></phtrash><span class="clamp text visuallyHidden"> Clear queue </span>
    </button>
  </div>
  <div class="column centerAll noMediaMessage">
    <phmusicnotes size="50"></phmusicnotes>
    <p>No tracks found.</p>
  </div>
</div>"
`;

exports[`MusicPlayerAndQueue > when isQueuePlayerOpened is false > matches the snapshot 1`] = `
"<div class="musicPlayer">
  <div class="inputRange standard desktopOnly trackSeeker" aria-label="Seek" aria-valuetext="00:00 of 00:00">
    <div class="centerItems slider">
      <div class="progressWrapper">
        <div class="process" style="width: 0px;"></div>
        <!--v-if-->
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <div class="spaceBetween centerItems inner">
    <div class="centerItems trackDetailsWrapper"><button class="centerItems buttonLink mobileOnly queueControl mobileOnly queueControl" type="button" title="Open queue">
        <phqueue class="icon" aria-hidden="true" size="24" weight="regular"></phqueue><span class="clamp text visuallyHidden"> Open queue </span>
      </button>
      <div class="centerAll preloadImage image">
        <div class="iconImage">
          <!---->
        </div>
      </div>
      <div class="trackDetails">
        <div class="marqueeScroll">
          <div class="bulletList inner">
            <div class="content">
              <p class="strong mBXS"></p>
            </div>
          </div>
        </div>
        <!--v-if-->
      </div>
    </div><span class="centerItems spinningLoader spinningLoader mobileOnly playPauseButton"><ph-circle-notch-stub size="24" class="icon"></ph-circle-notch-stub><span class="visuallyHidden">Loading...</span></span>
    <div class="centerItems playerControls centerAll desktopOnly"><button class="centerItems buttonLink" type="button" title="Switch shuffle off">
        <phshuffle class="icon" aria-hidden="true" size="24" weight="regular" color="currentColor"></phshuffle><span class="clamp text visuallyHidden">Switch shuffle off</span>
      </button>
      <div class="centerItems spaceBetween"><button class="centerItems buttonLink disabled" disabled="" type="button" title="Previous track">
          <phskipback class="icon" aria-hidden="true" size="24" weight="fill"></phskipback><span class="clamp text visuallyHidden"> Previous track </span>
        </button>
        <!--v-if--><span class="centerItems spinningLoader spinningLoader playPauseButton"><ph-circle-notch-stub size="24" class="icon"></ph-circle-notch-stub><span class="visuallyHidden">Loading...</span></span>
        <!--v-if--><button class="centerItems buttonLink disabled" disabled="" type="button" title="Next track">
          <phskipforward class="icon" aria-hidden="true" size="24" weight="fill"></phskipforward><span class="clamp text visuallyHidden"> Next track </span>
        </button>
      </div><button class="centerItems buttonLink" type="button" title="Turn on repeat all">
        <phrepeat class="icon" aria-hidden="true" size="24" weight="regular" color="currentColor"></phrepeat><span class="clamp text visuallyHidden">Turn on repeat all</span>
      </button>
    </div>
    <div class="centerAll playerOptions desktopOnly playerOptions">
      <!--v-if-->
      <div class="centerItems volumeControl"><button class="centerItems buttonLink" type="button" title="Mute">
          <phspeakerhigh class="icon" aria-hidden="true" size="24" weight="regular"></phspeakerhigh><span class="clamp text visuallyHidden">Mute</span>
        </button>
        <div class="centerItems smallFont volumeInputWrapper">
          <div class="inputRange" aria-label="Volume" aria-valuetext="1 of 1" hide-thumb="">
            <div class="centerItems slider">
              <div class="progressWrapper">
                <div class="process" style="width: 0px;"></div>
                <!--v-if-->
              </div>
              <div class="thumb" style="left: -6px;"></div>
              <!--v-if-->
            </div>
          </div>
          <p aria-hidden="" class="currentVolume">100</p>
          <p class="visuallyHidden"> Volume at 100% </p>
        </div>
      </div>
      <!--v-if--><button class="centerItems buttonLink" type="button" title="Media information">
        <phinfo class="icon" aria-hidden="true" size="24" weight="regular"></phinfo><span class="clamp text visuallyHidden"> Media information </span>
      </button>
      <!--v-if--><button class="centerItems buttonLink" type="button" title="Open queue">
        <phqueue class="icon" aria-hidden="true" size="24" weight="regular"></phqueue><span class="clamp text visuallyHidden"> Open queue </span>
      </button>
    </div>
  </div>
</div>
<div class="queueWrapper column" style="display: none;"><button class="centerItems buttonLink centerAll fullWidth queueAction queueAction" type="button" title="Close queue menu">
    <phcaretdown class="icon" aria-hidden="true" size="24" weight="bold"></phcaretdown><span class="clamp text visuallyHidden"> Close queue menu </span>
  </button>
  <div class="column playerWrapper">
    <div class="wrapper">
      <div class="inner">
        <div class="imageWrapper">
          <div class="imageInner">
            <div class="preloadImageWrapper">
              <div class="centerAll preloadImage preloadImage">
                <div class="iconImage">
                  <!---->
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div class="trackDetailsWrapper">
        <div class="mBAllL column trackDetails">
          <div>
            <div class="marqueeScroll">
              <div class="bulletList inner">
                <div class="content">
                  <h2 class="strong mBXS"></h2>
                </div>
              </div>
            </div>
            <!--v-if-->
          </div>
          <div class="fullWidth">
            <div class="inputRange standard fullWidth" aria-label="Seek" aria-valuetext="00:00 of 00:00">
              <div class="centerItems slider">
                <div class="progressWrapper">
                  <div class="process" style="width: 0px;"></div>
                  <!--v-if-->
                </div>
                <!--v-if-->
                <!--v-if-->
              </div>
            </div>
            <!--v-if-->
          </div>
          <div class="centerItems spaceBetween fullWidth secondaryOptions"><button class="centerItems buttonLink disabled" disabled="" type="button" title="Previous track">
              <phskipback class="icon" aria-hidden="true" size="24" weight="fill"></phskipback><span class="clamp text visuallyHidden"> Previous track </span>
            </button>
            <!--v-if--><span class="centerItems spinningLoader spinningLoader playPauseButton"><ph-circle-notch-stub size="24" class="icon"></ph-circle-notch-stub><span class="visuallyHidden">Loading...</span></span>
            <!--v-if--><button class="centerItems buttonLink disabled" disabled="" type="button" title="Next track">
              <phskipforward class="icon" aria-hidden="true" size="24" weight="fill"></phskipforward><span class="clamp text visuallyHidden"> Next track </span>
            </button>
          </div>
          <div class="centerAll spaceBetween secondaryOptions">
            <!--v-if--><button class="centerItems buttonLink" type="button" title="Switch shuffle off">
              <phshuffle class="icon" aria-hidden="true" size="24" weight="regular" color="currentColor"></phshuffle><span class="clamp text visuallyHidden">Switch shuffle off</span>
            </button><button class="centerItems buttonLink" type="button" title="Turn on repeat all">
              <phrepeat class="icon" aria-hidden="true" size="24" weight="regular" color="currentColor"></phrepeat><span class="clamp text visuallyHidden">Turn on repeat all</span>
            </button>
            <!--v-if--><button class="centerItems buttonLink" type="button" title="Media information">
              <phinfo class="icon" aria-hidden="true" size="24" weight="regular"></phinfo><span class="clamp text visuallyHidden"> Media information </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div><button class="centerItems buttonLink centerAll fullWidth queueAction queueAction" type="button" title="Open queue list">
    <phplaylist class="icon" aria-hidden="true" size="24" weight="bold"></phplaylist><span class="clamp text visuallyHidden"> Open queue list </span>
  </button>
</div>
<div class="queueWrapper" style="display: none;">
  <div class="centerAll"><button class="centerItems buttonLink centerAll fullWidth queueAction queueAction" type="button" title="Close queue list">
      <phcaretdown class="icon" aria-hidden="true" size="24" weight="bold"></phcaretdown><span class="clamp text visuallyHidden"> Close queue list </span>
    </button></div>
  <div class="spaceBetween">
    <div></div><button class="centerItems buttonLink" type="button" title="Clear queue">
      <phtrash class="icon" aria-hidden="true" size="24" weight="regular"></phtrash><span class="clamp text visuallyHidden"> Clear queue </span>
    </button>
  </div>
  <div class="column centerAll noMediaMessage">
    <phmusicnotes size="50"></phmusicnotes>
    <p>No tracks found.</p>
  </div>
</div>"
`;

exports[`MusicPlayerAndQueue > when isQueuePlayerOpened is true > matches the snapshot 1`] = `
"<div class="musicPlayer">
  <div class="inputRange standard desktopOnly trackSeeker" aria-label="Seek" aria-valuetext="00:00 of 00:00">
    <div class="centerItems slider">
      <div class="progressWrapper">
        <div class="process" style="width: 0px;"></div>
        <!--v-if-->
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <div class="spaceBetween centerItems inner">
    <div class="centerItems trackDetailsWrapper"><button class="centerItems buttonLink mobileOnly queueControl mobileOnly queueControl" type="button" title="Open queue">
        <phqueue class="icon" aria-hidden="true" size="24" weight="regular"></phqueue><span class="clamp text visuallyHidden"> Open queue </span>
      </button>
      <div class="centerAll preloadImage image">
        <div class="iconImage">
          <!---->
        </div>
      </div>
      <div class="trackDetails">
        <div class="marqueeScroll">
          <div class="bulletList inner">
            <div class="content">
              <p class="strong mBXS"></p>
            </div>
          </div>
        </div>
        <!--v-if-->
      </div>
    </div><span class="centerItems spinningLoader spinningLoader mobileOnly playPauseButton"><ph-circle-notch-stub size="24" class="icon"></ph-circle-notch-stub><span class="visuallyHidden">Loading...</span></span>
    <div class="centerItems playerControls centerAll desktopOnly"><button class="centerItems buttonLink" type="button" title="Switch shuffle off">
        <phshuffle class="icon" aria-hidden="true" size="24" weight="regular" color="currentColor"></phshuffle><span class="clamp text visuallyHidden">Switch shuffle off</span>
      </button>
      <div class="centerItems spaceBetween"><button class="centerItems buttonLink disabled" disabled="" type="button" title="Previous track">
          <phskipback class="icon" aria-hidden="true" size="24" weight="fill"></phskipback><span class="clamp text visuallyHidden"> Previous track </span>
        </button>
        <!--v-if--><span class="centerItems spinningLoader spinningLoader playPauseButton"><ph-circle-notch-stub size="24" class="icon"></ph-circle-notch-stub><span class="visuallyHidden">Loading...</span></span>
        <!--v-if--><button class="centerItems buttonLink disabled" disabled="" type="button" title="Next track">
          <phskipforward class="icon" aria-hidden="true" size="24" weight="fill"></phskipforward><span class="clamp text visuallyHidden"> Next track </span>
        </button>
      </div><button class="centerItems buttonLink" type="button" title="Turn on repeat all">
        <phrepeat class="icon" aria-hidden="true" size="24" weight="regular" color="currentColor"></phrepeat><span class="clamp text visuallyHidden">Turn on repeat all</span>
      </button>
    </div>
    <div class="centerAll playerOptions desktopOnly playerOptions">
      <!--v-if-->
      <div class="centerItems volumeControl"><button class="centerItems buttonLink" type="button" title="Mute">
          <phspeakerhigh class="icon" aria-hidden="true" size="24" weight="regular"></phspeakerhigh><span class="clamp text visuallyHidden">Mute</span>
        </button>
        <div class="centerItems smallFont volumeInputWrapper">
          <div class="inputRange" aria-label="Volume" aria-valuetext="1 of 1" hide-thumb="">
            <div class="centerItems slider">
              <div class="progressWrapper">
                <div class="process" style="width: 0px;"></div>
                <!--v-if-->
              </div>
              <div class="thumb" style="left: -6px;"></div>
              <!--v-if-->
            </div>
          </div>
          <p aria-hidden="" class="currentVolume">100</p>
          <p class="visuallyHidden"> Volume at 100% </p>
        </div>
      </div>
      <!--v-if--><button class="centerItems buttonLink" type="button" title="Media information">
        <phinfo class="icon" aria-hidden="true" size="24" weight="regular"></phinfo><span class="clamp text visuallyHidden"> Media information </span>
      </button>
      <!--v-if--><button class="centerItems buttonLink" type="button" title="Open queue">
        <phqueue class="icon" aria-hidden="true" size="24" weight="regular"></phqueue><span class="clamp text visuallyHidden"> Open queue </span>
      </button>
    </div>
  </div>
</div>
<div class="queueWrapper column slide-up-down-enter-from slide-up-down-enter-active"><button class="centerItems buttonLink centerAll fullWidth queueAction queueAction" type="button" title="Close queue menu">
    <phcaretdown class="icon" aria-hidden="true" size="24" weight="bold"></phcaretdown><span class="clamp text visuallyHidden"> Close queue menu </span>
  </button>
  <div class="column playerWrapper">
    <div class="wrapper">
      <div class="inner">
        <div class="imageWrapper">
          <div class="imageInner">
            <div class="preloadImageWrapper">
              <div class="centerAll preloadImage preloadImage">
                <div class="iconImage">
                  <!---->
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div class="trackDetailsWrapper">
        <div class="mBAllL column trackDetails">
          <div>
            <div class="marqueeScroll">
              <div class="bulletList inner">
                <div class="content">
                  <h2 class="strong mBXS"></h2>
                </div>
              </div>
            </div>
            <!--v-if-->
          </div>
          <div class="fullWidth">
            <div class="inputRange standard fullWidth" aria-label="Seek" aria-valuetext="00:00 of 00:00">
              <div class="centerItems slider">
                <div class="progressWrapper">
                  <div class="process" style="width: 0px;"></div>
                  <!--v-if-->
                </div>
                <!--v-if-->
                <!--v-if-->
              </div>
            </div>
            <!--v-if-->
          </div>
          <div class="centerItems spaceBetween fullWidth secondaryOptions"><button class="centerItems buttonLink disabled" disabled="" type="button" title="Previous track">
              <phskipback class="icon" aria-hidden="true" size="24" weight="fill"></phskipback><span class="clamp text visuallyHidden"> Previous track </span>
            </button>
            <!--v-if--><span class="centerItems spinningLoader spinningLoader playPauseButton"><ph-circle-notch-stub size="24" class="icon"></ph-circle-notch-stub><span class="visuallyHidden">Loading...</span></span>
            <!--v-if--><button class="centerItems buttonLink disabled" disabled="" type="button" title="Next track">
              <phskipforward class="icon" aria-hidden="true" size="24" weight="fill"></phskipforward><span class="clamp text visuallyHidden"> Next track </span>
            </button>
          </div>
          <div class="centerAll spaceBetween secondaryOptions">
            <!--v-if--><button class="centerItems buttonLink" type="button" title="Switch shuffle off">
              <phshuffle class="icon" aria-hidden="true" size="24" weight="regular" color="currentColor"></phshuffle><span class="clamp text visuallyHidden">Switch shuffle off</span>
            </button><button class="centerItems buttonLink" type="button" title="Turn on repeat all">
              <phrepeat class="icon" aria-hidden="true" size="24" weight="regular" color="currentColor"></phrepeat><span class="clamp text visuallyHidden">Turn on repeat all</span>
            </button>
            <!--v-if--><button class="centerItems buttonLink" type="button" title="Media information">
              <phinfo class="icon" aria-hidden="true" size="24" weight="regular"></phinfo><span class="clamp text visuallyHidden"> Media information </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div><button class="centerItems buttonLink centerAll fullWidth queueAction queueAction" type="button" title="Open queue list">
    <phplaylist class="icon" aria-hidden="true" size="24" weight="bold"></phplaylist><span class="clamp text visuallyHidden"> Open queue list </span>
  </button>
</div>
<div class="queueWrapper" style="display: none;">
  <div class="centerAll"><button class="centerItems buttonLink centerAll fullWidth queueAction queueAction" type="button" title="Close queue list">
      <phcaretdown class="icon" aria-hidden="true" size="24" weight="bold"></phcaretdown><span class="clamp text visuallyHidden"> Close queue list </span>
    </button></div>
  <div class="spaceBetween">
    <div></div><button class="centerItems buttonLink" type="button" title="Clear queue">
      <phtrash class="icon" aria-hidden="true" size="24" weight="regular"></phtrash><span class="clamp text visuallyHidden"> Clear queue </span>
    </button>
  </div>
  <div class="column centerAll noMediaMessage">
    <phmusicnotes size="50"></phmusicnotes>
    <p>No tracks found.</p>
  </div>
</div>"
`;

exports[`MusicPlayerAndQueue > when showMediaPlayer value is false > matches the snapshot 1`] = `
"<div class="musicPlayer" style="display: none;">
  <div class="inputRange standard desktopOnly trackSeeker" aria-label="Seek" aria-valuetext="00:00 of 00:00">
    <div class="centerItems slider">
      <div class="progressWrapper">
        <div class="process" style="width: 0px;"></div>
        <!--v-if-->
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <div class="spaceBetween centerItems inner">
    <div class="centerItems trackDetailsWrapper"><button class="centerItems buttonLink mobileOnly queueControl mobileOnly queueControl" type="button" title="Open queue">
        <phqueue class="icon" aria-hidden="true" size="24" weight="regular"></phqueue><span class="clamp text visuallyHidden"> Open queue </span>
      </button>
      <div class="centerAll preloadImage image">
        <div class="iconImage">
          <!---->
        </div>
      </div>
      <div class="trackDetails">
        <div class="marqueeScroll">
          <div class="bulletList inner">
            <div class="content">
              <p class="strong mBXS"></p>
            </div>
          </div>
        </div>
        <!--v-if-->
      </div>
    </div><span class="centerItems spinningLoader spinningLoader mobileOnly playPauseButton"><ph-circle-notch-stub size="24" class="icon"></ph-circle-notch-stub><span class="visuallyHidden">Loading...</span></span>
    <div class="centerItems playerControls centerAll desktopOnly"><button class="centerItems buttonLink" type="button" title="Switch shuffle off">
        <phshuffle class="icon" aria-hidden="true" size="24" weight="regular" color="currentColor"></phshuffle><span class="clamp text visuallyHidden">Switch shuffle off</span>
      </button>
      <div class="centerItems spaceBetween"><button class="centerItems buttonLink disabled" disabled="" type="button" title="Previous track">
          <phskipback class="icon" aria-hidden="true" size="24" weight="fill"></phskipback><span class="clamp text visuallyHidden"> Previous track </span>
        </button>
        <!--v-if--><span class="centerItems spinningLoader spinningLoader playPauseButton"><ph-circle-notch-stub size="24" class="icon"></ph-circle-notch-stub><span class="visuallyHidden">Loading...</span></span>
        <!--v-if--><button class="centerItems buttonLink disabled" disabled="" type="button" title="Next track">
          <phskipforward class="icon" aria-hidden="true" size="24" weight="fill"></phskipforward><span class="clamp text visuallyHidden"> Next track </span>
        </button>
      </div><button class="centerItems buttonLink" type="button" title="Turn on repeat all">
        <phrepeat class="icon" aria-hidden="true" size="24" weight="regular" color="currentColor"></phrepeat><span class="clamp text visuallyHidden">Turn on repeat all</span>
      </button>
    </div>
    <div class="centerAll playerOptions desktopOnly playerOptions">
      <!--v-if-->
      <div class="centerItems volumeControl"><button class="centerItems buttonLink" type="button" title="Mute">
          <phspeakerhigh class="icon" aria-hidden="true" size="24" weight="regular"></phspeakerhigh><span class="clamp text visuallyHidden">Mute</span>
        </button>
        <div class="centerItems smallFont volumeInputWrapper">
          <div class="inputRange" aria-label="Volume" aria-valuetext="1 of 1" hide-thumb="">
            <div class="centerItems slider">
              <div class="progressWrapper">
                <div class="process" style="width: 0px;"></div>
                <!--v-if-->
              </div>
              <div class="thumb" style="left: -6px;"></div>
              <!--v-if-->
            </div>
          </div>
          <p aria-hidden="" class="currentVolume">100</p>
          <p class="visuallyHidden"> Volume at 100% </p>
        </div>
      </div>
      <!--v-if--><button class="centerItems buttonLink" type="button" title="Media information">
        <phinfo class="icon" aria-hidden="true" size="24" weight="regular"></phinfo><span class="clamp text visuallyHidden"> Media information </span>
      </button>
      <!--v-if--><button class="centerItems buttonLink" type="button" title="Open queue">
        <phqueue class="icon" aria-hidden="true" size="24" weight="regular"></phqueue><span class="clamp text visuallyHidden"> Open queue </span>
      </button>
    </div>
  </div>
</div>
<div class="queueWrapper column" style="display: none;"><button class="centerItems buttonLink centerAll fullWidth queueAction queueAction" type="button" title="Close queue menu">
    <phcaretdown class="icon" aria-hidden="true" size="24" weight="bold"></phcaretdown><span class="clamp text visuallyHidden"> Close queue menu </span>
  </button>
  <div class="column playerWrapper">
    <div class="wrapper">
      <div class="inner">
        <div class="imageWrapper">
          <div class="imageInner">
            <div class="preloadImageWrapper">
              <div class="centerAll preloadImage preloadImage">
                <div class="iconImage">
                  <!---->
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div class="trackDetailsWrapper">
        <div class="mBAllL column trackDetails">
          <div>
            <div class="marqueeScroll">
              <div class="bulletList inner">
                <div class="content">
                  <h2 class="strong mBXS"></h2>
                </div>
              </div>
            </div>
            <!--v-if-->
          </div>
          <div class="fullWidth">
            <div class="inputRange standard fullWidth" aria-label="Seek" aria-valuetext="00:00 of 00:00">
              <div class="centerItems slider">
                <div class="progressWrapper">
                  <div class="process" style="width: 0px;"></div>
                  <!--v-if-->
                </div>
                <!--v-if-->
                <!--v-if-->
              </div>
            </div>
            <!--v-if-->
          </div>
          <div class="centerItems spaceBetween fullWidth secondaryOptions"><button class="centerItems buttonLink disabled" disabled="" type="button" title="Previous track">
              <phskipback class="icon" aria-hidden="true" size="24" weight="fill"></phskipback><span class="clamp text visuallyHidden"> Previous track </span>
            </button>
            <!--v-if--><span class="centerItems spinningLoader spinningLoader playPauseButton"><ph-circle-notch-stub size="24" class="icon"></ph-circle-notch-stub><span class="visuallyHidden">Loading...</span></span>
            <!--v-if--><button class="centerItems buttonLink disabled" disabled="" type="button" title="Next track">
              <phskipforward class="icon" aria-hidden="true" size="24" weight="fill"></phskipforward><span class="clamp text visuallyHidden"> Next track </span>
            </button>
          </div>
          <div class="centerAll spaceBetween secondaryOptions">
            <!--v-if--><button class="centerItems buttonLink" type="button" title="Switch shuffle off">
              <phshuffle class="icon" aria-hidden="true" size="24" weight="regular" color="currentColor"></phshuffle><span class="clamp text visuallyHidden">Switch shuffle off</span>
            </button><button class="centerItems buttonLink" type="button" title="Turn on repeat all">
              <phrepeat class="icon" aria-hidden="true" size="24" weight="regular" color="currentColor"></phrepeat><span class="clamp text visuallyHidden">Turn on repeat all</span>
            </button>
            <!--v-if--><button class="centerItems buttonLink" type="button" title="Media information">
              <phinfo class="icon" aria-hidden="true" size="24" weight="regular"></phinfo><span class="clamp text visuallyHidden"> Media information </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div><button class="centerItems buttonLink centerAll fullWidth queueAction queueAction" type="button" title="Open queue list">
    <phplaylist class="icon" aria-hidden="true" size="24" weight="bold"></phplaylist><span class="clamp text visuallyHidden"> Open queue list </span>
  </button>
</div>
<div class="queueWrapper" style="display: none;">
  <div class="centerAll"><button class="centerItems buttonLink centerAll fullWidth queueAction queueAction" type="button" title="Close queue list">
      <phcaretdown class="icon" aria-hidden="true" size="24" weight="bold"></phcaretdown><span class="clamp text visuallyHidden"> Close queue list </span>
    </button></div>
  <div class="spaceBetween">
    <div></div><button class="centerItems buttonLink" type="button" title="Clear queue">
      <phtrash class="icon" aria-hidden="true" size="24" weight="regular"></phtrash><span class="clamp text visuallyHidden"> Clear queue </span>
    </button>
  </div>
  <div class="column centerAll noMediaMessage">
    <phmusicnotes size="50"></phmusicnotes>
    <p>No tracks found.</p>
  </div>
</div>"
`;

exports[`MusicPlayerAndQueue > when showMediaPlayer value is true > matches the snapshot 1`] = `
"<div class="musicPlayer slide-up-down-enter-from slide-up-down-enter-active">
  <div class="inputRange standard desktopOnly trackSeeker" aria-label="Seek" aria-valuetext="00:00 of 00:00">
    <div class="centerItems slider">
      <div class="progressWrapper">
        <div class="process" style="width: 0px;"></div>
        <!--v-if-->
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <div class="spaceBetween centerItems inner">
    <div class="centerItems trackDetailsWrapper"><button class="centerItems buttonLink mobileOnly queueControl mobileOnly queueControl" type="button" title="Open queue">
        <phqueue class="icon" aria-hidden="true" size="24" weight="regular"></phqueue><span class="clamp text visuallyHidden"> Open queue </span>
      </button>
      <div class="centerAll preloadImage image">
        <div class="iconImage">
          <!---->
        </div>
      </div>
      <div class="trackDetails">
        <div class="marqueeScroll">
          <div class="bulletList inner">
            <div class="content">
              <p class="strong mBXS"></p>
            </div>
          </div>
        </div>
        <!--v-if-->
      </div>
    </div><span class="centerItems spinningLoader spinningLoader mobileOnly playPauseButton"><ph-circle-notch-stub size="24" class="icon"></ph-circle-notch-stub><span class="visuallyHidden">Loading...</span></span>
    <div class="centerItems playerControls centerAll desktopOnly"><button class="centerItems buttonLink" type="button" title="Switch shuffle off">
        <phshuffle class="icon" aria-hidden="true" size="24" weight="regular" color="currentColor"></phshuffle><span class="clamp text visuallyHidden">Switch shuffle off</span>
      </button>
      <div class="centerItems spaceBetween"><button class="centerItems buttonLink disabled" disabled="" type="button" title="Previous track">
          <phskipback class="icon" aria-hidden="true" size="24" weight="fill"></phskipback><span class="clamp text visuallyHidden"> Previous track </span>
        </button>
        <!--v-if--><span class="centerItems spinningLoader spinningLoader playPauseButton"><ph-circle-notch-stub size="24" class="icon"></ph-circle-notch-stub><span class="visuallyHidden">Loading...</span></span>
        <!--v-if--><button class="centerItems buttonLink disabled" disabled="" type="button" title="Next track">
          <phskipforward class="icon" aria-hidden="true" size="24" weight="fill"></phskipforward><span class="clamp text visuallyHidden"> Next track </span>
        </button>
      </div><button class="centerItems buttonLink" type="button" title="Turn on repeat all">
        <phrepeat class="icon" aria-hidden="true" size="24" weight="regular" color="currentColor"></phrepeat><span class="clamp text visuallyHidden">Turn on repeat all</span>
      </button>
    </div>
    <div class="centerAll playerOptions desktopOnly playerOptions">
      <!--v-if-->
      <div class="centerItems volumeControl"><button class="centerItems buttonLink" type="button" title="Mute">
          <phspeakerhigh class="icon" aria-hidden="true" size="24" weight="regular"></phspeakerhigh><span class="clamp text visuallyHidden">Mute</span>
        </button>
        <div class="centerItems smallFont volumeInputWrapper">
          <div class="inputRange" aria-label="Volume" aria-valuetext="1 of 1" hide-thumb="">
            <div class="centerItems slider">
              <div class="progressWrapper">
                <div class="process" style="width: 0px;"></div>
                <!--v-if-->
              </div>
              <div class="thumb" style="left: -6px;"></div>
              <!--v-if-->
            </div>
          </div>
          <p aria-hidden="" class="currentVolume">100</p>
          <p class="visuallyHidden"> Volume at 100% </p>
        </div>
      </div>
      <!--v-if--><button class="centerItems buttonLink" type="button" title="Media information">
        <phinfo class="icon" aria-hidden="true" size="24" weight="regular"></phinfo><span class="clamp text visuallyHidden"> Media information </span>
      </button>
      <!--v-if--><button class="centerItems buttonLink" type="button" title="Open queue">
        <phqueue class="icon" aria-hidden="true" size="24" weight="regular"></phqueue><span class="clamp text visuallyHidden"> Open queue </span>
      </button>
    </div>
  </div>
</div>
<div class="queueWrapper column" style="display: none;"><button class="centerItems buttonLink centerAll fullWidth queueAction queueAction" type="button" title="Close queue menu">
    <phcaretdown class="icon" aria-hidden="true" size="24" weight="bold"></phcaretdown><span class="clamp text visuallyHidden"> Close queue menu </span>
  </button>
  <div class="column playerWrapper">
    <div class="wrapper">
      <div class="inner">
        <div class="imageWrapper">
          <div class="imageInner">
            <div class="preloadImageWrapper">
              <div class="centerAll preloadImage preloadImage">
                <div class="iconImage">
                  <!---->
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div class="trackDetailsWrapper">
        <div class="mBAllL column trackDetails">
          <div>
            <div class="marqueeScroll">
              <div class="bulletList inner">
                <div class="content">
                  <h2 class="strong mBXS"></h2>
                </div>
              </div>
            </div>
            <!--v-if-->
          </div>
          <div class="fullWidth">
            <div class="inputRange standard fullWidth" aria-label="Seek" aria-valuetext="00:00 of 00:00">
              <div class="centerItems slider">
                <div class="progressWrapper">
                  <div class="process" style="width: 0px;"></div>
                  <!--v-if-->
                </div>
                <!--v-if-->
                <!--v-if-->
              </div>
            </div>
            <!--v-if-->
          </div>
          <div class="centerItems spaceBetween fullWidth secondaryOptions"><button class="centerItems buttonLink disabled" disabled="" type="button" title="Previous track">
              <phskipback class="icon" aria-hidden="true" size="24" weight="fill"></phskipback><span class="clamp text visuallyHidden"> Previous track </span>
            </button>
            <!--v-if--><span class="centerItems spinningLoader spinningLoader playPauseButton"><ph-circle-notch-stub size="24" class="icon"></ph-circle-notch-stub><span class="visuallyHidden">Loading...</span></span>
            <!--v-if--><button class="centerItems buttonLink disabled" disabled="" type="button" title="Next track">
              <phskipforward class="icon" aria-hidden="true" size="24" weight="fill"></phskipforward><span class="clamp text visuallyHidden"> Next track </span>
            </button>
          </div>
          <div class="centerAll spaceBetween secondaryOptions">
            <!--v-if--><button class="centerItems buttonLink" type="button" title="Switch shuffle off">
              <phshuffle class="icon" aria-hidden="true" size="24" weight="regular" color="currentColor"></phshuffle><span class="clamp text visuallyHidden">Switch shuffle off</span>
            </button><button class="centerItems buttonLink" type="button" title="Turn on repeat all">
              <phrepeat class="icon" aria-hidden="true" size="24" weight="regular" color="currentColor"></phrepeat><span class="clamp text visuallyHidden">Turn on repeat all</span>
            </button>
            <!--v-if--><button class="centerItems buttonLink" type="button" title="Media information">
              <phinfo class="icon" aria-hidden="true" size="24" weight="regular"></phinfo><span class="clamp text visuallyHidden"> Media information </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div><button class="centerItems buttonLink centerAll fullWidth queueAction queueAction" type="button" title="Open queue list">
    <phplaylist class="icon" aria-hidden="true" size="24" weight="bold"></phplaylist><span class="clamp text visuallyHidden"> Open queue list </span>
  </button>
</div>
<div class="queueWrapper" style="display: none;">
  <div class="centerAll"><button class="centerItems buttonLink centerAll fullWidth queueAction queueAction" type="button" title="Close queue list">
      <phcaretdown class="icon" aria-hidden="true" size="24" weight="bold"></phcaretdown><span class="clamp text visuallyHidden"> Close queue list </span>
    </button></div>
  <div class="spaceBetween">
    <div></div><button class="centerItems buttonLink" type="button" title="Clear queue">
      <phtrash class="icon" aria-hidden="true" size="24" weight="regular"></phtrash><span class="clamp text visuallyHidden"> Clear queue </span>
    </button>
  </div>
  <div class="column centerAll noMediaMessage">
    <phmusicnotes size="50"></phmusicnotes>
    <p>No tracks found.</p>
  </div>
</div>"
`;
